# UPSILoN-T

./: .gitignore  MANIFEST.in  pyproject.toml
upsilont/: __init__.py  base.py  component.py  logger.py  test_predict.py
upsilont/features/: period_LS_pyfftw.py  variability_features.py
