[project]
name = "upsilont"
version = "0.2.0"
description = "UPSILoN-T"
authors = [
    {name = 'Dae-Won Kim', email = 'dwk@etri.re.kr'},
    {name = "Adam McMaster", email = "me@adam-mcmaster.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "scikit-learn (>=1.5.0)",
    "numpy (>=1.17)",
    "scipy (>=1.3)",
    "pandas (>=0.25)",
    "torch (>=2.10.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
